style.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap");

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
:root {
  font-size: 62.5%;
  --very-dark-blue: hsl(243, 87%, 12%);
  --desaturated-blue: hsl(238, 22%, 44%);
  --bright-blue: hsl(224, 93%, 58%);
  --moderate-cyan: hsl(170, 45%, 43%);
  --light-grayish-blue: hsl(240, 75%, 98%);
  --light-gray: hsl(0, 0%, 75%);
  --clr-white: hsl(0, 0%, 100%);
  --clr-bg: hsl(0, 0%, 90%);
  --font-family-content: "Open Sans", sans-serif;
  --font-family-title: "Raleway", sans-serif;
  --fw-bold: 700;
  --fw-regular: 400;
}
body {
  font-family: var(--font-family-content);
  font-weight: var(--fw-regular);
  color: var(--desaturated-blue);

  line-height: 1.6;
}
li {
  list-style: none;
  color: inherit;
}
a {
  text-decoration: none;
  border-radius: 1rem;
}
img {
  max-width: 100%;
  height: auto;
  object-fit: cover;
}
/* Sections */

.container {
  display: grid;
  grid-template-columns:
    [container-start] repeat(12, minmax(min-content, 12rem))
    [container-end];
  justify-content: center;
}

.layout {
  grid-column: container-start/container-end;
  display: flex;
  align-items: center;
  justify-content: space-between;

  padding: 0 12rem;
}

.header {
  padding: 4rem 0;
}
.navbar {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.navbar__logo {
  width: 12rem;
  height: 3rem;
  object-fit: cover;
}
.navbar__nav {
  list-style: none;
  display: flex;
  gap: 6rem;
}
.navbar__nav--link {
  font-size: 1.4rem;
  font-weight: var(--fw-bold);
  color: var(--very-dark-blue);
  font-family: var(--very-dark-blue);
  border-bottom: 2px solid transparent;
  transform-origin: right;
  transition: transform 0.3s ease-in-out;
}

.navbar__nav--item:hover .navbar__nav--link {
  color: var(--bright-blue);
}

.hero__content {
  flex: 0 45%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}
.hero__content--title {
  font-size: 3.4rem;
  line-height: 4.2rem;
  letter-spacing: -1px;
  margin-right: 2rem;
  color: var(--very-dark-blue);
  font-weight: var(--fw-bold);
}
.hero__content--para {
  color: var(--very-dark-blue);
  font-size: 1.6rem;
  line-height: 2.4rem;
  font-weight: var(--fw-regular);
}
.hero__img {
  flex: 0 55%;
}
.hero__content--cta {
  display: flex;
  align-items: center;
  column-gap: 1rem;
}
.input {
  flex: 0 50%;
  padding: 1rem;
  border-radius: 3px;
  border: 1px solid var(--light-gray);
  outline: none;
}
.btn-primary {
  flex: 0 30%;
  padding: 0.9rem 2.1rem;

  font-weight: var(--fw-bold);
  color: var(--clr-white);
  background-color: var(--bright-blue);
  border: 1px solid transparent;
  border-radius: 2px;
  cursor: pointer;
  outline: none;
  transition: all 1s ease-out;
}
.btn-primary:hover {
  background-color: var(--clr-white);
  color: var(--bright-blue);
  border-color: var(--bright-blue);
}
.features {
  padding: 12rem 0;
}
.features__content {
  flex: 0 45%;

  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 2rem 4rem;
}
.features__content--title {
  font-size: 3.4rem;
  line-height: 4.2rem;

  margin-right: 2rem;
  color: var(--very-dark-blue);
  font-weight: var(--fw-bold);
}
.feature__content--para {
  color: var(--very-dark-blue);
  font-size: 1.6rem;
  line-height: 2.4rem;
  font-weight: var(--fw-regular);
}
.features__img {
  flex: 0 55%;
}
.features__content--link {
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--moderate-cyan);
  font-size: 1.6rem;

  border-radius: 0;
  border-bottom: 1px solid var(--moderate-cyan);
  width: 20rem;
}
.feature__content--link a {
  color: var(--moderate-cyan);
}
.feature__content--link img {
  font-size: 1.6rem;
  margin-left: 2rem;
}

.testimonial {
  margin-top: 2rem;
  width: 80%;
  border: 1px solid var(-light-gray);
  padding: 2.5rem;
  display: flex;
  gap: 1rem;
  font-size: 1.3rem;
  flex-direction: column;
  border-radius: 1rem;
  box-shadow: 0 0 2px var(--light-gray);
}
.testimonial__img {
  width: 2rem;
  height: 2rem;
}
.testimonial__user {
  display: flex;
  align-items: center;
  column-gap: 1rem;
}
.testimonial__user--img {
  width: 5rem;
  height: 5rem;
  object-fit: cover;
  border-radius: 50%;
}
.news-letter {
  background-color: var(--desaturated-blue);
  padding: 10rem rem;
  color: var(--clr-white);
  display: flex;
  gap: 4rem;
  padding: 10rem 0;
}
.news-letter__content {
  flex: 0 35%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 2rem;
}

.news-letter__content--title {
  font-size: 3.4rem;
  line-height: 4.2rem;
  font-weight: var(--fw-bold);
  color: var(--clr-white);
}
.news_letter__content--para {
  color: var(--clr-white);
  font-size: 1.6rem;
  letter-spacing: -1px;
  line-height: 2.4rem;
  font-weight: var(--fw-regular);
}
.news-letter__form {
  flex: 0 45%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-left: auto;
}
.news-letter__form--input {
  padding: 1.6rem;
  align-self: stretch;
  color: var(--light-gray);
}
.news-letter__form--input::placeholder {
  color: var(--light-grayish-blue);
  font-size: 1.6rem;
}
.news-letter__form--btn {
  padding: 1.6rem 2.1rem;
  align-self: flex-start;
  border-left: 0;
}
.footer {
  padding: 10rem 5rem;
  background-color: var(--very-dark-blue);
  color: var(--clr-bg);
}
.footer__logo {
  filter: brightness(1%) invert(100);
  margin-bottom: 1rem;
}
.footer__nav {
  width: 100%;
  display: flex;
  justify-content: center;
}
.footer__nav > .footer__nav--item {
  flex: 0 25%;

  color: black;
  font-size: 1.6rem;
  color: var(--clr-white);
}

.first__cell img {
  margin-right: 1rem;
}
/* max width */
.second__cell {
  display: flex;
  flex-direction: column;
  align-items: center;

  gap: 1rem;
}
.second__cell--item a {
  color: var(--clr-white);
}
.third__cell {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}
.third__cell a {
  color: var(--clr-white);
}
.social__links {
  display: flex;
  flex-direction: row;
  gap: 3rem;
}
.social__links--item {
  border: 1px solid var(--clr-white);
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  text-align: center;
  transition: all 0.45s ease;
}
.social__links--item:hover {
  background-color: var(--clr-white);
  color: var(--very-dark-blue);
}
/* Animation */
.pulsate-bck {
  -webkit-animation: pulsate-bck 2s ease-in-out infinite both;
  animation: pulsate-bck 2s ease-in-out infinite both;
}

@-webkit-keyframes pulsate-bck {
  0% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -webkit-transform: scale(0.9);
    transform: scale(0.9);
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}
@keyframes pulsate-bck {
  0% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
  50% {
    -webkit-transform: scale(0.9);
    transform: scale(0.9);
  }
  100% {
    -webkit-transform: scale(1);
    transform: scale(1);
  }
}
@media (max-width: 1100px) {
  .layout {
    flex-direction: column;
    margin-top: 2rem;
  }
  .footer__nav > .footer__nav--item {
    flex: 0 50%;
  }
}

